// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | InfoBar Default usage 1`] = `
<div
  className="InfoBarstories__StyledBg-sc-1ah3c7t-0 kVPWZe"
>
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 egztwC"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              InfoBar should be used on top of the pages to show Marketing or Customer Support communication messages. Content of the InfoBar is just rendered 
              <code>
                children
              </code>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | InfoBar Different variants 1`] = `
<div
  className="InfoBarstories__StyledBg-sc-1ah3c7t-0 kVPWZe"
>
  <code>
    no variant passed, defaults to general
  </code>
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 egztwC"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    general
  </code>
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 egztwC"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    warning
  </code>
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 kbtoaI"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <polygon
                  points="10 1 20 19 0 19"
                />
                <polygon
                  className="WarningTriangle__StyledPolygon-sc-6bppq2-0 dqUcHO"
                  points="11 14 11 16 9 16 9 14 11 14 11 8 11 13 9 13 9 8 11 8"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    error
  </code>
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 keIpJJ"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 gXhzJA"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="CrossCircle__StyledPolygon-trx5td-0 jclHrK"
                  points="8.681 9.967 5.073 6.333 6.396 5 10.004 8.634 13.604 5.007 14.916 6.329 11.316 9.956 15 13.667 13.677 15 9.993 11.289 6.312 14.997 5 13.675"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              The US market is currently down, we are fixing it right now. It will soon be back and running. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    success
  </code>
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 fpxKiX"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="CheckMarkCircle__StyledPolygon-m74und-0 beCCsj"
                  points="13.695 6 15 7.314 8.696 13.69 5 9.924 6.319 8.656 8.696 11.059"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              We have fixed the US market issue. It is now back to service. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
</div>
`;

exports[`Storyshots Molecules | InfoBar onClose prop demo 1`] = `
<div
  className="InfoBarstories__StyledBg-sc-1ah3c7t-0 kVPWZe"
>
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 egztwC"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              Without onClose prop InfoBar cannot be dismissed
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey InfoBar__InfoBarPageWrapper-sc-1xd3qwc-0 egztwC"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 dJZrHK"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 emLnfS"
            >
              <svg
                aria-hidden="true"
                className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fywQJM"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              With onClose prop InfoBar can be dismissed, but ParentComponent is in charge to react and actually hide the InfoBar.
            </span>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 ggbGKR"
            >
              <button
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="15.739 12 24 20.062 19.969 24 12 16.223 4.031 24 0 20.062 8.261 12 0 3.938 4.031 0 12 7.777 19.969 0 24 3.938"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
